--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>María Barbara Zavala</title>
+  <title>Bárbara Nymeria Abaraci</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet" />
   <style>
     body {
@@ -74,7 +74,7 @@
 
   <div class="perfil-contenedor">
     <img src="https://i.postimg.cc/fLt35QmC/file-00000000ee6461fb8a11a83cee645c7f.png" alt="Foto de perfil" class="perfil" />
-    <div class="nombre">María Bárbara Zavala</div>
+    <div class="nombre">Bárbara Nymeria Arabaci</div>
   </div>
 
   <div class="contenido">
