--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
       display: flex;
       flex-direction: column;
       padding: 0 20px 40px 20px;
-      max-width: 600px;
     }
 
     .presentacion {
@@ -52,23 +51,11 @@
       text-align: left;
       letter-spacing: 0;
       margin-bottom: 20px;
+      max-width: 600px;
     }
 
     .presentacion p {
-      margin: 0 0 8px 0;
-    }
-
-    .presentacion strong {
-      font-weight: bold;
-    }
-
-    ol {
-      padding-left: 20px;
-      margin: 0 0 16px 0;
-    }
-
-    ol li {
-      margin-bottom: 12px;
+      margin: 0 0 4px 0;
     }
 
     .link a {
@@ -76,8 +63,6 @@
       font-weight: bold;
       text-decoration: none;
       color: black;
-      display: block;
-      margin-bottom: 6px;
     }
 
     .link a:hover {
@@ -96,87 +81,38 @@
 
   <div class="contenido">
     <div class="presentacion">
+      <p><strong>Blog profesional.</strong></p>
+      <p>Diseñadora en arte digital.</p>
+      <p>Licenciada en administración financiera.</p>
+      <p>Especialista en liderazgo y gestión empresarial.</p>
+      <p>Mis colecciones en el estudio y análisis de mi profesión.</p>
 
-      <p><strong>Blog profesional</strong></p>
+      <p><strong>Blog en conocimiento.</strong></p>
+      <p>Lectora.</p>
+      <p>Mis colecciones en filosofía y psicología.</p>
 
-      <p>Licenciada en administración financiera. Especialista en liderazgo y gestión empresarial. Mis colecciones en el estudio, análisis de mi profesión y conocimiento académico y profesional de diferentes disciplinas relacionadas a mi carrera.</p>
+      <p><strong>Blog personal.</strong></p>
+      <p>Arte creado por mí.</p>
+      <p>Mi galería, mi archivo visual.</p>
+      <p>Diseñadora en arte digital.</p>
+      <p>Estudiante en programación.</p>
+      <p>Mis colecciones en arte, fotografía, diseño y color.</p>
 
-      <ol>
-        <li>
-          <strong>Mentalidad necesaria para éste blog</strong><br />
-          <strong>Mentalidad de aprendiz continuo:</strong> Siempre abierta a actualizar mi visión, leer, escuchar a otros, y mejorar mi comprensión. No creo que “ya lo sé todo”.<br />
-          <strong>Curiosidad genuina:</strong> Me interesa el “por qué” y el “cómo”, no solo el “qué”. Esto me lleva a profundizar y cuestionar.<br />
-          Pensamiento crítico: Analizo diferentes puntos de vista, no repito sin pensar. Puedo argumentar por qué creo en lo que digo.<br />
-          <strong>Autenticidad:</strong> Hablo desde mi experiencia, sin querer aparentar perfección. Quiero generar confianza real.<br />
-          <strong>Confianza humilde:</strong> Sé que mi punto de vista tiene valor, pero no necesito imponer. Estoy dispuesta a debatir, no a demostrar superioridad.<br />
-          <strong>Blog académico, profesional y empresarial:</strong> Mis colecciones en administración, gestión empresarial y conocimiento sobre mi profesión.
-        </li>
+      <p><strong>Blog académico.</strong></p>
+      <p>Blog y Enciclopedia en el estudio de mi profesión.</p>
+      <p>Administración financiera.</p>
+      <p>Liderazgo.</p>
+      <p>Gestión empresarial.</p>
+      <p>Ciencias administrativas.</p>
+      <p>Conocimiento sobre filosofía.</p>
 
-        <li>
-          <strong>Conocimiento necesario</strong><br />
-          <strong>Base teórica sólida:</strong> Conocer los fundamentos del tema, autores, escritores, expertos, profesionales o corrientes importantes.<br />
-          <strong>Experiencia práctica:</strong> Haber probado, fallado, aprendido y aplicado.<br />
-          <strong>Contexto actualizado:</strong> Saber cómo se aplica ese tema hoy (tendencias, casos actuales, herramientas).<br />
-          <strong>Capacidad de síntesis y comunicación:</strong> Poder explicar ideas complejas de forma clara y útil para otros.
-        </li>
-      </ol>
+      <p><strong>Mis colecciones:</strong></p>
 
-      <p><strong>Temario</strong></p>
-
-      <p><strong>Noticias y tendencias</strong><br />
-      Política, empresas, negocios</p>
-
-      <p><strong>Ciencias administrativas</strong><br />
-      Administración de empresas, administración general, administración financiera, administración de recursos humanos, gestión empresarial, gestión estratégica, gestión de proyectos, comportamiento organizacional, emprendimiento y creación de empresas, dirección de empresas, dirección de proyectos, dirección financiera, finanzas, contabilidad, liderazgo, mercadotecnia, publicidad, negocios, empresas, negocios internacionales, comercio internacional.</p>
-
-      <p>Ciencias administrativas, ciencias de la gestión, ciencias gerenciales, ciencias del management, ciencias económicas, ciencias empresariales, ciencias organizacionales, ciencias financieras, ciencias contables, ciencias monetarias, ciencias aplicadas a la empresa.</p>
-
-      <p><strong>Ciencias sociales</strong><br />
-      Ciencias políticas, geopolítica, administración pública, derecho administrativo, economía pública, gestión pública, relaciones internacionales.</p>
-
-      <p><strong>Filosofía y Liderazgo</strong><br />
-      Liderazgo corporativo, liderazgo organizacional, liderazgo empresarial. Filosofía empresarial, axiología empresarial. Ética y valores en la empresa. Mentalidad empresarial.</p>
-
-      <p><strong>Administración</strong><br />
-      Todos los temas en administración.</p>
-
-      <p><strong>Finanzas</strong><br />
-      Finanzas personales, finanzas corporativas, finanzas públicas, mercados financieros, inversiones, gestión de riesgos financieros, finanzas internacionales, instituciones financieras, análisis financiero, planeación financiera, matemáticas financieras, economía financiera, ingeniería financiera.</p>
-
-      <p><strong>Contabilidad</strong><br />
-      Contabilidad financiera, contabilidad de costos, contabilidad de gestión o administrativa, contabilidad fiscal o tributaria, contabilidad internacional, auditoría contable.</p>
-
-      <p><strong>Diseño gráfico</strong><br />
-      Arte, diseño gráfico, diseño de marca, paletas de colores.</p>
-
-      <p><strong>Conocimiento empresarial</strong><br />
-      Ciencias administrativas y temas relacionados con empresas y negocios.</p>
-
-      <p><strong>Educación y aprendizaje</strong><br />
-      Libros y conocimiento en el ámbito empresarial y ciencias administrativas.</p>
-
-      <p><strong>Productividad</strong><br />
-      A nivel profesional, laboral, empresarial y académico.</p>
-
-      <p><strong>Negocios y emprendimiento</strong><br />
-      Ideas de negocio.</p>
-
-      <p><strong>Tecnología e innovación</strong><br />
-      Ámbito empresarial y ciencias administrativas.</p>
-
-      <p><strong>Mis colecciones, blogs, links, documentos en archivos y carpetas:</strong></p>
       <div class="link">
-        <a href="https://drive.google.com/drive/folders/1FJlhVvWQbqMB8EWIDJePpOr8u8iUrY5o" target="_blank">
+        <a href="https://drive.google.com/drive/folders/1UEKf50uZjv4vN1SRgZTP1MF3_o5FwRWM" target="_blank">
           BioSites Google Drive
         </a>
-        <a href="https://drive.google.com/drive/folders/1UEKf50uZjv4vN1SRgZTP1MF3_o5FwRWM" target="_blank">
-          BioSites Google Drive mis colecciones mbz
-        </a>
-        <a href="https://drive.google.com/drive/folders/11OFhJlqLU-cyQJd11odr7IOv1B69Q2kt" target="_blank">
-          BioSites Google Drive académico MBZ
-        </a>
       </div>
-
     </div>
   </div>
 
