--- a/index.html
+++ b/index.html
@@ -23,29 +23,20 @@
       position: relative;
       margin-top: -90px;
       padding-left: 20px;
-      display: flex;
-      align-items: center;
-      gap: 20px;
     }
 
     .perfil {
       width: 160px;
       height: 160px;
       border-radius: 50%;
-      border: 5px solid;
-      border-image-slice: 1;
-      border-width: 5px;
-      border-image-source: linear-gradient(45deg, #bfa038, #f0db7d, #bfa038);
+      border: 5px solid black; /* borde negro */
       object-fit: cover;
-      box-shadow: 0 0 8px rgba(191, 160, 56, 0.8);
     }
 
     .nombre {
       font-size: 24px;
       font-weight: bold;
       margin: 10px 0 20px 0;
-      color: #bfa038; /* dorado metálico */
-      text-shadow: 0 0 4px #f0db7d;
     }
 
     .contenido {
@@ -84,7 +75,7 @@
   <div class="portada"></div>
 
   <div class="perfil-contenedor">
-    <img src="https://i.postimg.cc/3x3QzSGq/maria-barbara-zavala-perfil.png" alt="Foto de perfil" class="perfil" />
+    <img src="https://i.postimg.cc/QC2YFtCL/Mar-a-Barbara-Zavala-20250606-081932-0000.png" alt="Foto de perfil" class="perfil" />
     <div class="nombre">María Bárbara Zavala</div>
   </div>
 
